css/styles.css
* {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    word-spacing: 0.3em;
}

@media (max-width: 768px) {
    .main p {
        font-size: 0.8em;
        margin: 0 0.7em;
    }
}

@media (max-width: 768px) and (orientation: landscape) {
    .main p {
        font-size: 0.8em;
        margin: 0 1.9em;
    }
}

@media (min-width: 769px) {
    .main p {
        margin: 0 4em;
    }
}

/* Main container */

.header {
    grid-area: header;
    display: flex;
    flex-direction: row;
}

.header>div p {
    text-transform: uppercase;
    font-size: 1.7rem;
    font-weight: bold;
    z-index: 1;
}

/* desktop */

@media (min-width: 769px) {
    .header {
        justify-content: center;
    }

    .header>div p {
        padding-left: 1em;
        font-size: 3rem;
        letter-spacing: 0.25em;
    }
}

/* Mobile landscape */

@media (max-width: 768px) and (orientation: landscape) {
    .header {
        justify-content: center;
    }

    .header>div p {
        padding-left: 1rem;
        font-size: 2rem;
    }
}

.nav {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}

.main {
    grid-area: main;
}

.nav {
    grid-area: nav;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    color: #000;
    transition: -webkit-transform 0.5s ease-in-out;
    transition: transform 0.5s ease-in-out;
    transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
}

#mainwork {
    position: relative;
    z-index: 0;
}

#mainwork::before {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url('../images/kai.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.2;
    z-index: -1;
}

#mainstudies {
    position: relative;
    z-index: 0;
}

#mainstudies::before {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url('../images/coder.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.165;
    z-index: -1;
}

a {
    text-decoration: none;
    color: #000;
}

.display-none {
    display: none;
}

.footer {
    grid-area: footer;
}

.contacts {
    color: #000;
    font-size: 2.6rem;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

@media (min-width: 769px) {
    .contacts {
        font-size: 4.5rem;
    }

    .contacts>a {
        transition: -webkit-transform 0.5s ease-in-out;
        transition: transform 0.5s ease-in-out;
        transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
    }

    .contacts>a:hover {
        -webkit-transform: scale(3, 3);
        transform: scale(3, 3);
    }
}

.main>p {
    padding: 0 2em;
    font-size: 0.5rem;
}

@media (min-width: 769px) {
    .main {
        margin: 0 4em;
        padding: 0;
        font-size: 1.5em;
    }
}

.grid-container {
    display: none;
    grid-template-areas:
        'header header header header header nav'
        'footer footer footer footer footer footer'
        'main main main main main main';
    gap: 2px;
    padding: 5px;
}

.grid-container>div {
    text-align: center;
    padding: 20px 0;
    font-size: 30px;
}

/* Menu container */

.work-text {
    grid-area: work-text;
    text-align: center;
}

.work-image {
    grid-area: work-image;
}

.studies-image {
    grid-area: studies-image;
}

.studies-text {
    grid-area: studies-text;
    text-align: center;
}

.interests-text {
    grid-area: interests-text;
    text-align: center;
}

.interests-image {
    grid-area: interests-image;
}

.menu-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas:
        'work-text work-image'
        'studies-image studies-text'
        'interests-text interests-image';
    gap: 10px;
    height: 100vh;
}

@media (max-width: 768px) and (orientation: landscape) {
    .menu-container {
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        grid-template-areas:
            'work-text studies-image interests-text'
            'work-image studies-text interests-image';
    }
}

@media (max-width: 768px) {
    .menu-container {
        gap: 2px;
        height: 100vh;
        align-items: stretch;
    }
}

.menu-container>div {
    background-color: rgba(255, 255, 255, 0.8);
    text-align: center;
    align-items: center;
    padding: 0.2em;
}

.menu-container>[class$="-text"] {
    background-color: #000;
    color: #fff;
    font-size: 10em;
    font-weight: bolder;
    text-shadow: 2px 2px 4px rgba(166, 42, 180, 0.5);
    transition: text-shadow, -webkit-transform 0.5s ease-in-out;
    transition: text-shadow, transform 0.5s ease-in-out;
    transition: text-shadow, transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
}

@media (max-width: 768px) {
    .menu-container>[class$="-text"] {
        font-size: 2em;
    }
}

.menu-container>[class$="-text"]:hover {
    text-shadow: 4px 4px 45px rgba(7, 141, 204, 0.5),
        -4px -4px 80px rgba(255, 255, 255, 0.5);
    -webkit-transform: rotate(-10deg);
    transform: rotate(-10deg);
}

.menu-container>[class$="-image"] {
    background-color: #fff;
}

.menu-container img {
    max-height: 30vh;
    width: auto;
    overflow: hidden;
}

@media (max-width: 768px) and (orientation: portrait) {
    .menu-container img {
        max-height: 30vh;
        width: 48vw;
    }

    .studies-image img {
        margin-top: 6vh;
    }

    .interests-image img {
        margin-top: 4vh;
    }
}

@media (max-width: 768px) and (orientation: landscape) {
    .menu-container img {
        max-height: 50vh;
    }
}
/*# sourceMappingURL=styles.css.map */

